<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#0B0A0A"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="316dp"
        android:background="#078C9E"
        android:backgroundTint="#0BA6C1"
        android:elevation="10dp"
        app:cardBackgroundColor="#040DBD"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textphone" />

    <TextView
        android:id="@+id/textphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageButton
        android:id="@+id/delete"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@null"
        app:srcCompat="@android:drawable/ic_input_delete"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/call"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/call"
        android:backgroundTint="#008000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:srcCompat="@android:drawable/ic_menu_call"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/b1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:strokeColor="#D1C4E9"
        app:backgroundTint="@null"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/b4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_4"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b8"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/_7"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b10"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="54dp"
        android:text="@string/maisoumenos"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_2"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b5"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_5"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b11"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="54dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_0"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toStartOf="@+id/b12"
        app:layout_constraintStart_toEndOf="@+id/b10"
        app:layout_constraintTop_toBottomOf="@+id/b7"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b7"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_8"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/b9"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_3"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/b6"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_6"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/b12"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="54dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/cardinal"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/b9"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        android:backgroundTint="#9A9D9E"
        android:text="@string/_9"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b6"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
